--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           buttonInputElement.disabled = false;
           buttonInputElement.textContent = "Написать"
             allComment = responseData.comments;
-            addComment();
+            // addComment();
             renderAllComment();
         });
 };
