--- a/index.html
+++ b/index.html
@@ -101,9 +101,6 @@
     // Отправление данных на сервер
 
     const postApi = (nameInputElement, commentInputElement) => {
-      if(nameInputElement.value.length < 3 || commentInputElement.value.length < 3) {
-        alert("Имя и комментарий пользователя должны быть не менее 3 символов");
-      }
     return fetch("https://wedev-api.sky.pro/api/v1/anna-kapaeva/comments", {
             method: "POST",
             body: JSON.stringify({
@@ -143,17 +140,16 @@
           commentInputElement.value = "";
         })
         .catch((error) => {
-          // buttonInputElement.disabled = false;
-          // buttonInputElement.textContent = "Написать";
-          if(error.message === "BadRequest:") {
+          if(error.message.startsWith("BadRequest:")) {
             alert("Ты сделал ошибку в запросе, исправь данные и попробуй снова");
-          } else if(error.message === "ServerUnavailable:") {
+          } else if(error.message.startsWith("ServerUnavailable:")) {
             alert("Сервер временно не работает, попробуй позднее");
-          } else if(error.message === "ServerError:" || error.message === "Error:") {
+          } else if(error.message.startsWith("ServerError:") || error.message.startsWith("Error:")) {
             alert("Кажется что-то пошло не так, попробуй позднее");
           } else {
             alert("Неизвестная ошибка, попробуй позднее");
           }
+          console.warn(error);
         });       
 };
       
